# grokking-dlt-kafka

./: .env.example  .gitignore  README.md  docker-compose.yml  kafka.yml  load_env.sh  makefile  pyproject.toml
advanced_usage/: helpers.py  kafka_runner.py
data-generator/: Dockerfile  docker-entrypoint.sh  requirements.txt
data-generator/src/: __init__.py  main.py
data-generator/src/commands/: __init__.py  generate.py  register_schemas.py
data-generator/src/config/: settings.py
data-generator/src/generators/: __init__.py  base.py  fake_data.py  relationships.py
data-generator/src/models/: __init__.py  base.py  order.py  payment.py  product.py  returns.py  user.py
data-generator/src/producers/: __init__.py  avro_producer.py  factory.py  json_producer.py
dlt_kafka_baseline/: kafka_pipeline.py  requirements.txt  simple_pipeline.py
dlt_kafka_baseline/.dlt/: .sources
docs/: asset.html  data-generator.md  technical-design-doc.md
kafka-connect/: Dockerfile
kafka-connect/connector/: src.json
kafka-connect/postgres/: .init.sql
src/.dlt/: .sources
src/lib/kafka/: discovery.py  message_processors.py  resources.py  tracking.py
