[project]
name = "grokking-dlt-kafka"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.7"
dependencies = [
    "confluent-kafka[avro,json,protobuf]>=2.11.0",
    "dlt[duckdb,parquet]>=1.14.1",
    "psutil>=7.0.0",
    "pydantic>=2.11.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["advanced_usage"]
